<resources>
    <string name="app_name">Schnitzeljagd</string>
    <string name="pref_movingAverage_default">3</string>

    <!-- activity titles -->
    <string name="title_activity_recordedit_rec">Ort aufnehmen</string>
    <string name="title_activity_recordedit_edit">Ort editieren</string>
    <string name="title_activity_nodelist">Orte verwalten</string>
    <string name="title_activity_show_fingerprint"></string>
    <string name="title_activity_edgesmanager">Wege verwalten</string>
    <string name="title_activity_location">Standort ermitteln</string>
    <string name="title_activity_findroute">Route finden</string>
    <string name="title_activity_importexport">Import / Export</string>
    <string name="title_activity_settings">Einstellungen</string>


    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_measurement">Messen</string>
    <string name="title_calibration">Kalibrieren</string>
    <string name="title_record">Aufnehmen</string>

    <!-- coordinates sharedpreferences stuff -->
    <string name="coordinates_shared_preferences">de.htwberlin.f4.ai.ba.coordinates.PREFERENCE_FILE</string>
    <string name="coordinates_shared_preferences_pressure">PRESSURE</string>
    <string name="coordinates_shared_preferences_steplength">STEP_LENGTH</string>
    <string name="coordinates_shared_preferences_stepperiod">STEP_PERIOD</string>

    <!-- fragment_coordinates_calibrate -->
    <string name="step_setup_start">Start</string>
    <string name="step_setup_stop">Stop</string>
    <string name="step_setup_instructions">Bitte schreiten Sie eine von der Distanz her bekannte Strecke ab (min. 10m).</string>
    <string name="step_count">Schrittanzahl:</string>
    <string name="step_setup_save">Speichern</string>
    <string name="step_setup_distance_hint">Bitte geben Sie die zurückgelegte Strecke in Metern ein</string>
    <string name="step_setup_next">Weiter</string>
    <string name="step_setup_back">Zurück</string>
    <string name="step_setup_done">Fertig</string>
    <string name="step_setup_average_stepdistance">Schrittlänge:</string>
    <string name="step_setup_average_stepperiod">Schrittdauer:</string>
    <string name="step_setup_compass_hint">Bitte Kompass überprüfen und bei Bedarf kalibrieren!</string>

    <!-- activity_measure -->
    <string name="measure_start">Start</string>
    <string name="measure_stop">Stop</string>
    <string name="measure_add">Schritt</string>
    <string name="measure_pressure">Luftdruck:</string>
    <string name="measure_steps">Schritte:</string>
    <string name="measure_distance">Distanz:</string>
    <string name="measure_height">Höhe:</string>

    <!-- activity_sensor_record -->
    <string name="x_caption">X:</string>
    <string name="y_caption">Y:</string>
    <string name="z_caption">Z:</string>
    <string name="record_start">Start</string>
    <string name="record_stop">Stop</string>
    <string name="compass_simple">Compass Simple</string>
    <string name="compass_fusion">Compass Fusion</string>
    <string name="period_hint">Bitte wählen Sie in welchem Zeitabstand (ms) die Werte gespeichert werden sollen</string>


    <!-- activity_node_record_edit -->
    <string name="capture_button">Bild aufnehmen</string>
    <string name="description_text">Beschreibung:</string>
    <string name="measure_time_text">Messzeit:</string>
    <string name="wifi_name_text">WLAN:</string>
    <string name="node_name_text">Name des Ortes:</string>
    <string name="minutes_text">Minute(n)</string>
    <string name="save_node_button_text">Speichern</string>
    <string name="standard_wifi_name">BVG Wi-Fi</string>
    <string name="measure_wifi_button_text">Fingerprint erstellen</string>
    <string name="record_another_node_title_text">Neuen Ort aufnehmen?</string>
    <string name="please_enter_node_name">Bitte erst einen Namen eingeben.</string>
    <string name="record_another_node_question">Möchten Sie noch einen Ort aufnehmen?</string>
    <string name="no_fingerprint_title_text">Kein Fingerprint</string>
    <string name="node_saved_toast">Ort gespeichert</string>
    <string name="node_already_exists_toast">Ort existiert bereits: bitte neuen Namen wählen.</string>
    <string name="no_fingerprint_available">Kein Fingerprint vorhanden!</string>
    <string name="no_ssid_filter">-Kein Filter-</string>
    <string name="fingerprint_finished">Messung beendet.</string>
    <string name="initial_wifi_name">WLAN-Filter:</string>
    <string name="coordinates_text"><b>Koordinaten:</b></string>
    <string name="record_and_edit_infobox">Bitte Eingaben machen und Foto sowie Fingerprint aufnehmen. Zum Speichern auf die Diskette tippen.</string>
    <string name="permissions_warning_title_text">Bitte Zugriff erlauben</string>
    <string name="permissions_warning_text">Die App benötigt Zugriff auf Kamera, Standort und externen Speicher des Gerätes um zu funktionieren.</string>
    <string name="please_stay"><b>Messung läuft...</b>\nBitte stehen bleiben und das Gerät möglichst ruhig halten.</string>

    <!-- activity_nodelist -->
    <string name="nodelist_infobox_text">Antippen zum editieren, Tippen + halten zum Löschen</string>

    <!-- activity_node_show -->
    <string name="image_placeholder">Bild</string>
    <string name="node_show_infobox_text"><b>Hinweis:</b> Bild antippen zum Vergrößern</string>
    <string name="initial_wifi_name_show"><b>WLAN-Filter:</b></string>

    <!-- activity_location -->
    <string name="measured_node_text">Gemessener Ort:</string>
    <string name="measured_node_textview_text">Bitte Messung durchführen</string>
    <string name="measure_one_second_text">Messen (1 s)</string>
    <string name="measure_ten_seconds_text">Messen (10 s)</string>
    <string name="no_node_found_text">Kein Ort gefunden</string>
    <string name="searching_node_text">Lokalisiere...</string>
    <string name="percent_label_textview"> %</string>
    <string name="detailed_results_button_description">Details</string>
    <string name="location_infobox_text">Falls die 1-Sekunden-Messung keinen Erfolg hat, probieren Sie bitte die 10-Sekunden-Messung. \n\n<b>Tip:</b> Falls vorhanden, Bild antippen zum vergrößern</string>

    <!-- activity_import_export -->
    <string name="import_button_text">Daten importieren</string>
    <string name="export_button_text">Daten exportieren</string>
    <string name="import_title_question">Importieren?</string>
    <string name="export_title_question">Überschreiben?</string>
    <string name="import_database_warining">Wirklich importieren? Es werden alle Daten in der Datenbank überschrieben!</string>
    <string name="export_database_warning">Es existiert bereits eine exportierte Datenbankdatei. Soll diese überschrieben werden?</string>
    <string name="database_imported_toast">Datenbank importiert.</string>
    <string name="database_exported_toast">Datenbank nach \"/IndoorPositioning/Exported\" exportiert.</string>
    <string name="import_export_infobox_text">Die Daten werden in die Datei\n \"<b>/IndoorPositioning/Exported/indoor_data.db</b>\"\nim externen Speicher des Gerätes exportiert und auch aus dieser wieder importiert.</string>

    <!-- activity_edges_manager -->
    <string name="connect_nodes_button_text">Verbinden</string>
    <string name="accessibility_checkbox_text">Barrierefrei</string>
    <string name="start_edgesmanager">Von:</string>
    <string name="destination_edgesmanager">nach:</string>
    <string name="edges_manager_infobox_text">Tippen + halten: Weg löschen</string>
    <string name="edge_already_exists">Dieser Weg existiert bereits!</string>
    <string name="delete_entry_question">Möchten sie den Eintrag löschen?</string>

    <!-- acitvity_routefinder -->
    <string name="find_route_label">Route</string>
    <string name="navigation_result_header">Ihre Route:</string>
    <string name="no_route_found">Keine Route gefunden.</string>
    <string name="navigation_infobox_text"><b>Hinweis:</b> Durch Tippen auf die einzelnen Orte der Route können Details angezeigt werden.</string>
    <string name="from_label_text">Start:</string>
    <string name="to_label_text">Ziel:</string>
    <string name="locate_button_description">Standort-Button</string>
    <string name="select_wifi">Bitte WLAN wählen:</string>
    <string name="no_location_found">Standort nicht gefunden.</string>
    <string name="find_route_button_description">Route finden</string>
    <string name="location">Standort: </string>


    <string name="delete_entry_title_question">Eintrag löschen?</string>
    <string name="refreshed_toast">WLANs Aktualisiert</string>
    <string name="save_button_text">Speichern</string>
    <string name="delete_button_text">Löschen</string>
    <string name="delete_title_question">Löschen?</string>
    <string name="please_try_again">Bitte erneut versuchen</string>
    <string name="locate_via_gps_button_text">GPS Koordinaten ermitteln</string>
    <string name="current_gps_accuracy">Akt. GPS-Genauigkeit:</string>
    <string name="node_gps_accuracy">Node GPS-Genauigkeit:</string>

    <string name="paperchase_main_title">Schnitzeljagd</string>
    <string name="paperchase_main_empty_list">Zurzeit keine Schnitzeljagden verfügbar!</string>
    <string name="add_paperchase_name_of_paperchase">Name der Schnitzeljagd</string>
    <string name="add_paperchase_description_of_paperchase">Beschreibung der Schnitzeljagd</string>
    <string name="start_paperchase_description">Beschreibung:</string>
    <string name="start_paperchase_starting_point">Startpunkt der Schnitzeljagd:</string>
    <string name="start_paperchase_navigation">Navigation</string>
    <string name="start_paperchase_begin">Beginne Schnitzeljagd</string>
    <string name="start_paperchase_hint_text">Die Schnitzeljagd kann erst begonnen werden, wenn man sich am Startpunkt befindet</string>
    <string name="play_paperchase_hint_text">Dies ist dein Hinweis:</string>
    <string name="play_paperchase_hint_to_help">Bitte begeben Sie sich zum nächsten Ort</string>
    <string name="paperchase_change_string">Schnitzeljagd bearbeiten</string>
    <string name="paperchase_delete_string">Schnitzeljagd löschen</string>
    <string name="add_clues_search_nodes">Orte suchen</string>
    <string name="back_to_paperchase">Zurück zur Schnitzeljagd</string>
    <string name="finished_back_button_text"><b>Zurück zur Schnitzeljagdauswahl</b></string>
    <string name="paperchase_main_hint_to_help_text">Tippe auf eine Schnitzeljagd um sie zu spielen   oder auf das \'+\' um eine neue zu erstellen.</string>
    <string name="add_paperchase_empty_list_text">Auf \'+\' drücken, um Orte für Hinweise hinzuzufügen.</string>


</resources>
