<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="de.htwberlin.f4.ai.ma.indoorroutefinder.paperchase.StartPaperchaseActivity">

    <TextView
        android:id="@+id/start_paperchase_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="10dp"
        android:text="@string/start_paperchase_description"
        android:textColor="@android:color/black"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/start_paperchase_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ganz langer testtext blalf asol dnasd saoldn asoldnola sd
        owjaoldjn aoliwjdn oliajdnwoiand lkawnsa dnjsadjnasoldjn ashndkwahndhnakdsnkwakdsbnkwba
        djkmbawjk dmbawkd nbjkawbh dkjuwbad jmhbwajkdmb jkmawbdjmhzawbdjkzhbawdj hwba jdkbwa
        der text ist nichtmal lang genug hnasd ujasd noihef doui adfohawoh dowa hdowhaodha owidowiahdoiawoid
        oujhasd iuhsaol djnnasoljdn olasd olkasjd pjkw3poja lkdowipd jkwa jdpwajpdwjpkjd pw pdwmjn jetzt aber"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_below="@id/start_paperchase_name"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="vertical"
        android:maxHeight="130dp"
        android:paddingBottom="40dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/start_paperchase_description"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_paperchase_node_hint"
        android:text="@string/start_paperchase_starting_point"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:layout_below="@id/start_paperchase_description"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_below="@id/start_paperchase_node_hint"
        android:id="@+id/start_paperchase_node_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@string/image_placeholder"
            android:id="@+id/start_paperchase_imageview"/>

        <TextView
            android:id="@+id/start_paperchase_node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/start_paperchase_imageview"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/start_paperchase_node_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_paperchase_node_name"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_toEndOf="@id/start_paperchase_imageview" />

    </RelativeLayout>

    <Button
        android:id="@+id/start_navigate_to_first_clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_begin_paperchase"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/start_paperchase_navigation"
        android:textSize="20dp" />

    <Button
        android:id="@+id/start_begin_paperchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/start_paperchase_begin"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="8dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/info_box"
        android:text="@string/start_paperchase_hint_text"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
