<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.htwberlin.f4.ai.ma.indoorroutefinder.paperchase.AddPaperchaseActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_paperchase_name_layout">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:id="@+id/add_paperchase_name"
            android:hint="@string/add_paperchase_name_of_paperchase"
            android:inputType="textImeMultiLine|textCapSentences"
            android:imeOptions="actionDone"
            android:layout_alignParentTop="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_paperchase_description_layout"
        android:layout_below="@+id/add_paperchase_name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_paperchase_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:maxLines="4"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/add_paperchase_description_of_paperchase" />
    </android.support.design.widget.TextInputLayout>

    <de.htwberlin.f4.ai.ma.indoorroutefinder.paperchase.MySwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_paperchase_description_layout">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_paperchase_empty_view"
                android:text="@string/add_paperchase_empty_list_text"
                android:layout_margin="10dp"
                android:visibility="gone"/>

            <com.woxthebox.draglistview.DragListView
                android:id="@+id/add_paperchase_draglist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </de.htwberlin.f4.ai.ma.indoorroutefinder.paperchase.MySwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="5dp"
        android:onClick="fabClicked"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent" />

    <TextView
        android:id="@+id/add_paperchase_hint_to_help"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/info_box"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:textSize="14dp"
        android:text="Langes drücken auf einen Ort ermöglicht verschieben zum festlegegen der Reihenfolge."
        android:textAlignment="center" />
</RelativeLayout>
